--- a/styles.css
+++ b/styles.css
@@ -451,7 +451,7 @@ a {
 }
 
 fieldset {
-    height: auto;
+    height: 100%;
     border: none;
     font-family: 'Montserrat', sans-serif;
     display: flex;
@@ -620,8 +620,8 @@ textarea {
     #contact {
         height: 500px;
         width: 850px;
-        grid-template-columns: 250px 1fr;
-        grid-template-rows: 100px 1fr 100px;
+        grid-template-columns: 1fr 3px 2fr;
+        grid-template-rows: 100px 1fr;
     }
 
     #heading {
@@ -633,16 +633,6 @@ textarea {
         width: 50px;
     }
 
-    #contact-details {
-        font-size: 1.2em;
-        grid-template-columns: 150px 350px;
-        grid-template-rows: 1fr 1fr 1fr 125px;
-    }
-
-    #send-button {
-        width: 100px;
-        font-size: 0.9em;
-    }
 }
 
 @media only screen and (max-width: 1080px) {
