--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,10 @@ body {
     width: 100%;
 }
 
+.sticky + #header {
+    padding-top: 4em;
+  }
+
 #hero {
     height: 100vh;
     width: auto;
@@ -232,20 +236,21 @@ a {
 }
 
 .project-name {
-    font-size: 1.6em;
+    font-size: 1.7em;
     margin: 0 0 0.7em;
     color: var(--dark-grey);
 }
 
 .project-idea {
-    font-size: 1em;
+    font-size: 1.15em;
     margin: 0 0 0.7em;
     color: var(--dark-grey);
     opacity: 0.7;
 }
 
 .project-description {
-    font-size: 0.95em;
+    line-height: 1.45;
+    font-size: 1em;
     margin: 0;
 }
 
@@ -260,13 +265,12 @@ a {
 
 .technology {
     grid-area: technologies;
-    margin: 0 0 0 15px;
 }
 
 .technology-img {
     height: 50px;
     width: 50px;
-    margin: 0 5px;
+    margin: 0 10px 0 0;
 }
 
 #certifications {
@@ -291,7 +295,7 @@ a {
     align-self: center;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 75px 3px 1fr 3px auto;
+    grid-template-rows: 4.5em 3px 1fr 3px auto;
     grid-template-areas:
     "top"
     "dicider"
@@ -378,7 +382,7 @@ a {
 }
 
 .project-link {
-    color: var(--grey);
+    color: var(--dark-grey);
 }
 
 .project-link:hover {
@@ -395,7 +399,7 @@ a {
 }
 
 #contact-form {
-    height: 600px;
+    height: 100vh;
     width: auto;
     background-color: var(--very-light-grey);
     color: var(--dark-grey);
@@ -405,24 +409,24 @@ a {
 }
 
 #contact {
-    height: 400px;
-    width: 700px;
+    height: 30em;
+    width: 50em;;
     font-family: 'Montserrat', sans-serif;
     justify-self: center;
     align-self: center;
     display: grid;
     grid-template-columns: 1fr 3px 2fr;
-    grid-template-rows: 80px 1fr;
+    grid-template-rows: 5em 1fr;
     grid-column-gap: 20px;
     grid-template-areas:
-    "heading heading heading"
+    "icn heading heading"
     "icn separator contact";
 }
 
 #heading {
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: var(--dark-grey);
     margin: 0;
     align-self: center;
@@ -451,7 +455,7 @@ a {
 }
 
 fieldset {
-    height: 100%;
+    height: auto;
     border: none;
     font-family: 'Montserrat', sans-serif;
     display: flex;
@@ -459,15 +463,15 @@ fieldset {
 }
 
 .field-name {
-    padding: 0 0 7px;
+    padding: 0 0 5px;
     text-transform: uppercase;
-    font-size: 0.9em;
+    font-size: 0.8em;
 }
 
 .text {
     margin: 0 0 20px;
     padding: 0 0 5px;
-    font-size: 0.8em;
+    font-size: 0.7em;
     color: var(--dark-grey);
     width: 90%;
     background-color: var(--very-light-grey);
@@ -484,13 +488,16 @@ textarea {
 }
 
 #send-button {
+    text-transform: uppercase;
     background-color: var(--dark-grey);
     color: var(--white);
     font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
+    font-size: 0.8em;
+    padding: 5px;
+    margin: auto;
     border: none;
     border-radius: 25px;
-    width: 70px;
+    width: 7em;;
     cursor: pointer;
 }
 
