--- a/styles.css
+++ b/styles.css
@@ -186,19 +186,25 @@ a {
 }
 
 .button {
-    height: 2.5em;
-    width: 12em;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    padding: 0;
-    margin: 0 10px;
-    background-color: var(--very-light-grey);
-    border: 0.5px solid var(--grey);
-    border-radius: 50px;
-    color: var(--grey);
+    background-color: #2980b9;
+    border: none;
+    color: white;
+    width: 155px;
+    height: 40px;
     text-align: center;
-    line-height: 2.5em;
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0 4px;
+    padding: 0;
+    opacity: 0.8;
+    transition: 0.3s;
+    text-decoration: none;
     cursor: pointer;
+}
+  
+.button:hover {
+    opacity: 1;
 }
 
 .button:focus {
@@ -206,9 +212,9 @@ a {
 }
 
 .github-logo {
-    font-size: 1.5em;
-    color: var(--grey);
-    padding: 2px;
+    font-size: 18px;;
+    color: var(--white);
+    padding: 0 2px 0 0;
 }
 
 .vertical-line {
@@ -494,24 +500,6 @@ textarea {
     resize: none;
 }
 
-#send-button {
-    text-transform: uppercase;
-    background-color: var(--dark-grey);
-    color: var(--white);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.8em;
-    padding: 5px;
-    margin: 50px 0 auto auto;
-    border: none;
-    border-radius: 25px;
-    width: 7em;;
-    cursor: pointer;
-}
-
-#send-button:focus {
-    outline: none;
-}
-
 @media only screen and (min-width: 1600px) {
     #nav-bar {
         height: 5.6em;
@@ -554,9 +542,8 @@ textarea {
     }
 
     .button {
-        height: 2.8em;
-        width: 14em;
-        font-size: 0.8em;
+        width: 170px;
+        height: 48px;
     }
 
     .vertical-line {
@@ -640,6 +627,10 @@ textarea {
         grid-template-rows: 100px 1fr;
     }
 
+    #send-button {
+        font-size: 18px;
+    }
+
     #heading {
         font-size: 1.6em;
     }
@@ -711,16 +702,12 @@ textarea {
     }
 
     .button {
-        height: 2.5em;
-        width: 25vw;
-        padding: 0;
-        margin: 0 15px;
-        line-height: 2.5em;
-        font-size: 0.85em;
+        width: 190px;
+        height: 46px;
+        line-height: 22px;
     }
 
     .github-logo {
-        font-size: 1.6em;
         padding: 0 2px 0 0;
     }
 
@@ -811,7 +798,7 @@ textarea {
     #send-button {
         padding: 0;
         width: 30vw;
-        height: 2.2em;
+        height: 2.3em;
         font-size: 0.9em;
         justify-self: center;
         align-self: center;
@@ -928,16 +915,15 @@ textarea {
     }
 
     .button {
-        height: 2.4em;
-        width: 60vw;
+        height: 35px;
+        width: 55vw;
         padding: 0;
         margin: 0 0 15px 0;
-        line-height: 2.4em;
-        font-size: 0.8em;
+        line-height: 20px;
+        font-size: 14px;
     }
 
     .github-logo {
-        font-size: 1.6em;
         margin: 0 3px 0 0;
     }
 
