--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ a {
     padding: 0 8px;
 }
 
-.icon:hover {
+i:hover {
     color: var(--blue);
 }
 
@@ -187,9 +187,9 @@ a {
 
 .button {
     font-family: 'Montserrat', sans-serif;
-    background-color: #2980b9;
+    background-color: var(--blue);
     border: none;
-    color: white;
+    color: var(--white);
     width: 155px;
     height: 40px;
     text-align: center;
@@ -413,6 +413,7 @@ a {
 #contact-form {
     height: 100vh;
     width: auto;
+    padding: 40px 0;
     background-color: var(--very-light-grey);
     color: var(--dark-grey);
     display: grid;
@@ -421,18 +422,18 @@ a {
 }
 
 #contact {
-    height: 30em;
-    width: 50em;;
+    height: auto;
+    width: 45em;;
     font-family: 'Montserrat', sans-serif;
     justify-self: center;
     align-self: center;
     display: grid;
-    grid-template-columns: 1fr 3px 2fr;
-    grid-template-rows: 5em 1fr;
-    grid-column-gap: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5em 1fr 5em;
     grid-template-areas:
-    "icn heading heading"
-    "icn separator contact";
+    "heading"
+    "contact"
+    "icn";
 }
 
 #heading {
@@ -446,36 +447,20 @@ a {
     grid-area: heading;
 }
 
-#social-handles {
-    grid-area: icn;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.icn {
-    font-size: 2em;
-    color: var(--grey);
-    padding: 12px 0;
-}
-
-#separator {
-    background-color: var(--light-grey);
-    height: 90%;
-    width: 1px;
-}
-
 fieldset {
     height: auto;
+    width: 100%;
+    padding: 0;
+    margin: 0;
     border: none;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
+    grid-area: contact;
 }
 
 .field-name {
-    padding: 0 0 5px;
+    padding: 0 0 10px;
     text-transform: uppercase;
     font-size: 0.8em;
 }
@@ -485,7 +470,7 @@ fieldset {
     padding: 0 0 5px;
     font-size: 0.7em;
     color: var(--dark-grey);
-    width: 90%;
+    width: 100%;
     background-color: var(--very-light-grey);
     border: none;
     border-bottom: solid 1px var(--light-grey);
@@ -497,7 +482,37 @@ fieldset {
 }
 
 textarea {
+    margin: 0 0 20px;
+    padding: 10px;
+    font-size: 0.7em;
+    background-color: var(--very-light-grey);
+    box-sizing: border-box;
+    width: 100%;
+    height: 15em;;
+    border: solid 1px var(--light-grey);
     resize: none;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--dark-grey);
+    font-size: 0.7em;
+}
+
+textarea:focus {
+    outline: none;
+}
+
+#send-button {
+    margin: 0 0 0 auto;
+}
+
+#social-handles {
+    grid-area: icn;
+    margin: auto;
+}
+
+.icn {
+    font-size: 2em;
+    color: var(--grey);
+    padding: 0 10px;
 }
 
 @media only screen and (min-width: 1600px) {
@@ -616,15 +631,21 @@ textarea {
     }
 
     #contact-form {
-        height: 100vh;
+        height: auto;
         width: auto;
     }
 
     #contact {
-        height: 500px;
-        width: 850px;
-        grid-template-columns: 1fr 3px 2fr;
-        grid-template-rows: 100px 1fr;
+        height: auto;
+        width: 80%;
+    }
+
+    .text {
+        margin: 0 0 30px;
+    }
+
+    textarea {
+        margin: 0 0 30px;
     }
 
     #send-button {
@@ -637,7 +658,7 @@ textarea {
 
     .icn {
         font-size: 2em;
-        padding: 15px 0;
+        padding: 0 10px;
     }
 
 }
@@ -752,41 +773,11 @@ textarea {
 
     #contact {
         height: auto;
-        width: 80vw;
-        grid-template-columns: 80vw;
-        grid-template-rows: 1fr auto 2fr;
-        grid-row-gap: 30px;
-        grid-template-areas:
-        "heading"
-        "contact"
-        "icn";
-    }
-
-    #separator {
-        display: none;
-    }
-
-    #contact-form {
-        height: 80vh;
+        width: 70vw;
     }
 
     #contact-details {
-        width: 80vw;
-        padding: 0 15px;
         font-size: 1em;
-        margin: auto;
-        grid-area: contact;
-    }
-
-    fieldset {
-        margin: 0;
-    }
-
-    .field-name {
-        margin: 0;
-        padding: 0 0 10px;
-        justify-self: start;
-        text-transform: uppercase;
     }
 
     .text {
@@ -799,17 +790,7 @@ textarea {
         width: 30vw;
         height: 2.3em;
         font-size: 0.9em;
-        justify-self: center;
-        align-self: center;
-        margin: 30px auto 0;
-    }
-
-    #social-handles {
-        flex-direction: row;
-    }
-    
-    .icn {
-        padding: 0 10px;
+        margin: 30px auto 10px;
     }
 }
 
@@ -953,44 +934,18 @@ textarea {
     }
 
     #contact-form {
-        height: 80vh;
-        width: 100vw;
+
+        padding: 50px 0;
     }
 
     #contact {
         height: auto;
         width: 80vw;
         border: none;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto 1fr;
-        grid-template-areas:
-        "heading"
-        "contact"
-        "icn";
-    }
-
-    #contact-details {
-        padding: 0 15px;
-        border: none;
-        grid-area: contact;
-    }
-
-    .field-name {
-        margin: 0;
-        justify-self: start;
     }
 
     #send-button {
-        margin: auto;
-    }
-
-    #social-handles {
-        flex-direction: row;
-    }
-    
-    .icn {
-        font-size: 1.8em;
-        padding: 0 10px;
+        width: 60vw;
     }
 
 }
