Added nav bar underline when active

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ body {
     padding: 0 15px;
 }
 
+.nav-li.active {
+    text-decoration: underline;
+}
+
 .sticky {
     position: fixed;
     top: 0;
