Changed a button after the message is sent

--- a/styles.css
+++ b/styles.css
@@ -512,6 +512,11 @@ textarea:focus {
     margin: 0 0 0 auto;
 }
 
+#send-button:disabled {
+    opacity: 0.8;
+    cursor: default;
+}
+
 #social-handles {
     grid-area: icn;
     margin: auto;
