--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,9 @@ body {
     padding: 0 15px;
 }
 
-.nav-li.active {
+/* .nav-li.active {
     text-decoration: underline;
-}
+} */
 
 .sticky {
     position: fixed;
