Added nav bar underline on active sections

--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,9 @@ body {
     padding: 0 15px;
 }
 
-/* .nav-li.active {
+.active {
     text-decoration: underline;
-} */
+}
 
 .sticky {
     position: fixed;
