--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ body {
     color: var(--white);
     opacity: 0.8;
     display: inline;
-    padding: 0 15px;
+    margin: 0 15px;
+    padding: 3px 0;
 }
 
 .nav-li:hover {
@@ -51,7 +52,11 @@ body {
 }
 
 .active {
-    text-decoration: underline;
+    border-bottom: 1px solid var(--white);
+}
+
+.active:hover {
+    border-bottom: 1px solid var(--light-grey);
 }
 
 .sticky {
