--- a/styles.css
+++ b/styles.css
@@ -551,6 +551,8 @@ textarea:focus {
     }
 
     #hero {
+        min-height: 100vh;
+        height: auto;
         background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
             url("resources/hero-images/hero-image-mobile.jpg");
     }
@@ -630,14 +632,15 @@ textarea:focus {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 4em auto 0;
+        margin: 4em auto 1.5em;
         padding: 0;
         visibility: hidden;
     }
 
     #nav-ul a {
+        font-size: 1.1em;
         margin: 0;
-        padding: 0.5em 0;
+        padding: 0.6em 0;
     }
 
     /* show menu */
